# talk_with_chatgpt

./: README.md  pyproject.toml
talk_with_chatgpt/: main.py
